; ModuleID = '/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_eq.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_string.c_strm_str_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@STRM_TAG_STRING_F = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strm_str_eq(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @TRUE, align 4
  store i32 %10, i32* %3, align 4
  br label %44

11:                                               ; preds = %2
  %12 = load i64, i64* %4, align 8
  %13 = call i64 @strm_value_tag(i64 %12)
  %14 = load i64, i64* @STRM_TAG_STRING_F, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %23

16:                                               ; preds = %11
  %17 = load i64, i64* %5, align 8
  %18 = call i64 @strm_value_tag(i64 %17)
  %19 = load i64, i64* @STRM_TAG_STRING_F, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = load i32, i32* @FALSE, align 4
  store i32 %22, i32* %3, align 4
  br label %44

23:                                               ; preds = %16, %11
  %24 = load i64, i64* %4, align 8
  %25 = call i64 @strm_str_len(i64 %24)
  %26 = load i64, i64* %5, align 8
  %27 = call i64 @strm_str_len(i64 %26)
  %28 = icmp ne i64 %25, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %23
  %30 = load i32, i32* @FALSE, align 4
  store i32 %30, i32* %3, align 4
  br label %44

31:                                               ; preds = %23
  %32 = load i64, i64* %4, align 8
  %33 = call i32 @strm_str_ptr(i64 %32)
  %34 = load i64, i64* %5, align 8
  %35 = call i32 @strm_str_ptr(i64 %34)
  %36 = load i64, i64* %4, align 8
  %37 = call i64 @strm_str_len(i64 %36)
  %38 = call i64 @memcmp(i32 %33, i32 %35, i64 %37)
  %39 = icmp eq i64 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %31
  %41 = load i32, i32* @TRUE, align 4
  store i32 %41, i32* %3, align 4
  br label %44

42:                                               ; preds = %31
  %43 = load i32, i32* @FALSE, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %42, %40, %29, %21, %9
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i64 @strm_value_tag(i64) #1

declare dso_local i64 @strm_str_len(i64) #1

declare dso_local i64 @memcmp(i32, i32, i64) #1

declare dso_local i32 @strm_str_ptr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
